--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
         "sass-loader": "7.*",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "laravel-vue-pagination": "^2.3.1",
+        "vue-router": "^3.1.3",
+        "vue-spinner": "^1.0.3"
     }
 }
