--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     },
     "dependencies": {
         "laravel-vue-pagination": "^2.3.1",
+        "vue-loading-overlay": "^3.2.0",
         "vue-router": "^3.1.3",
-        "vue-spinner": "^1.0.3"
+        "vue-spinner": "^1.0.3",
+        "vuejs-dialog": "^1.4.1"
     }
 }
